examples/negative/holes/implicit.glask
module Main where
{

data Bool = True | False

; one x = if True then x else _


; fun x = x
; two x = if True then x else fun _

; three x = if True then x else _ x



}